k8's_dep_files/ingress-rule/ingressrule.yml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / #annotation to rewrite the incoming request path to the backend service path and for authencation
spec: 
   ingressClassName: nginx  #specifies the ingress controller to be used for this ingress resource
   rules: 
      - host: a9c08e7a329244872afd87bc6814fd1e-1160882222.ap-southeast-2.elb.amazonaws.com 
        http:
          paths:
              - path: /backend  #/backend #/ will be the path to access the nginx application
                pathType: Prefix  #
                backend:
                    service:
                      name: beci
                      port:
                        number: 8080   
              - path: / #/
                pathType: Prefix #/tomcat will be the path to access the tomcat application
                backend:
                    service:
                      name: feci
                      port:
                        number: 80
